[gd_scene load_steps=9 format=3 uid="uid://yp83nhm7krm7"]

[ext_resource type="Script" uid="uid://blid02pw4t5w1" path="res://entities/plants/unit.gd" id="1_tvn35"]
[ext_resource type="Texture2D" uid="uid://bnoc2ffxjjxvj" path="res://assets/tilemaps/tiles.png" id="2_djlq1"]
[ext_resource type="Resource" uid="uid://cme645v1t2rfx" path="res://data/units/attack_plant.tres" id="2_lk3vj"]
[ext_resource type="Shader" uid="uid://dlcw7ofxx4130" path="res://assets/shaders/2d_outline_shader.gdshader" id="3_lk3vj"]
[ext_resource type="Script" uid="uid://cfrqvbnw5vg64" path="res://common/components/drag_and_drop.gd" id="4_djlq1"]
[ext_resource type="Script" uid="uid://b0coxf2xi0lqs" path="res://common/components/outline_highlighter.gd" id="6_w1p1s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w1p1s"]
resource_local_to_scene = true
shader = ExtResource("3_lk3vj")
shader_parameter/line_colour = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1p1s"]
size = Vector2(16, 16)

[node name="Unit" type="Area2D" groups=["units"]]
script = ExtResource("1_tvn35")
stats = ExtResource("2_lk3vj")
metadata/_edit_group_ = true

[node name="Visuals" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_w1p1s")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(8, 8)
texture = ExtResource("2_djlq1")
region_enabled = true
region_rect = Rect2(85, 34, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_w1p1s")

[node name="DragAndDrop" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_djlq1")
target = NodePath("..")
metadata/_custom_type_script = "uid://cfrqvbnw5vg64"

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("6_w1p1s")
visuals = NodePath("../Visuals")
outline_colour = Color(1, 1, 1, 1)
outline_thickness = 4
metadata/_custom_type_script = "uid://b0coxf2xi0lqs"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
